--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-# Hello 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Фазлиев Газиз Фанисович - Риелтор Магнитогорск</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <div class="contain">
+      <h1>Фазлиев Газиз Фанисович</h1>
+      <div class="contact">
+        <a href="tel:89028937912">+7(902) 893 79-12 </a>
+        <a href="mail:fazlievg@gmail.com"> fazlievg@gmail.com </a>
+      </div>
+      <div><img class="pic" src="source/me.jpg" /></div>
+
+      <div class="block-info">
+        <a class="soc vk" href="https://vk.com/impressive001">
+          <img src="source/vk.png" />
+        </a>
+        <a class="soc inst" href="https://www.instagram.com/gazizfazliev91">
+          <img src="source/inst.png"
+        /></a>
+
+        <a class="soc teleg" href="tg://resolve?domain=gazizfg">
+          <img src="source/tele.png"
+        /></a>
+
+        <a
+          class="soc whatsup"
+          href="https://api.whatsapp.com/send?phone=89028937912"
+        >
+          <img src="source/what.png"
+        /></a>
+      </div>
+      <div class="description">
+        <p>
+          Услуги риэлтора на рынке недвижимости. Продать, купить квартиру, дом,
+          земельные участки.
+        </p>
+        <p>Продвижение объекта для быстрой и выгодной продажи.</p>
+        <p>
+          Консультация и помощь в оформлении документов по ипотечному
+          кредитованию Ипотечные сделки- подбор банков. Выбирайте для себя
+          только выгодные условия.
+        </p>
+        <p>
+          Работая с риэлтором-официальным партнером банка Вы можете найти для
+          себя более выгодное предложения банков по ипотечному кредитованию.
+        </p>
+        <p>Сопровождение сделок</p>
+        <img src="source/mag.jpg" class="logo"/>
+      </div>
+    </div>
+  </body>
+</html>
