--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
       <div><img class="pic" src="source/me.jpg" /></div>
 
       <div class="block-info">
-        <a class="soc vk" href="https://vk.com/impressive001">
+        <a class="soc vk" href="https://vk.com/impressive001" target="_blank">
           <img src="source/vk.png" />
         </a>
-        <a class="soc inst" href="https://www.instagram.com/gazizfazliev91">
+        <a
+          class="soc inst"
+          href="https://www.instagram.com/gazizfazliev91"
+          target="_blank"
+        >
           <img src="source/inst.png"
         /></a>
 
-        <a class="soc teleg" href="tg://resolve?domain=gazizfg">
+        <a class="soc teleg" href="tg://resolve?domain=gazizfg" target="_blank">
           <img src="source/tele.png"
         /></a>
 
         <a
           class="soc whatsup"
           href="https://api.whatsapp.com/send?phone=89028937912"
+          target="_blank"
         >
           <img src="source/what.png"
         /></a>
@@ -52,7 +57,7 @@
           себя более выгодное предложения банков по ипотечному кредитованию.
         </p>
         <p>Сопровождение сделок</p>
-        <img src="source/mag.jpg" class="logo"/>
+        <img src="source/mag.jpg" class="logo" />
       </div>
     </div>
   </body>
