--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Фазлиев Газиз Фанисович</h1>
       <div class="contact">
         <a href="tel:89028937912">+7(902) 893 79-12 </a>
-        <a href="mail:fazlievg@gmail.com"> fazlievg@gmail.com </a>
+        <a href="mailto:fazlievg@gmail.com"> fazlievg@gmail.com </a>
       </div>
       <div><img class="pic" src="source/me.jpg" /></div>
 
